--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,20 @@
-p{
+h1{
     font-size: 36px;
-    font-weight: 700;
+}
+
+h2{
+    font-size: 24px;
+    color: rgb(104, 56, 56);
+}
+
+h1,h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+}
+
+p{
+    font-size: 18px;
+    font-weight: 400;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(57, 85, 180);
 }
